@@ -8,7 +8,7 @@ test_that("subject variable is specified", {
 	data <- data.frame(
 		LBTEST = c("A", "B", "C"),
 		LBDY = c(1, 2, 3),
-		SUBJID = factor(c("a", "b", "a"))
+		SUBJID = factor(c("a", "b", "a"), levels = c("b", "a"))
 	)
 	
 	plots <- subjectProfileEventPlot(
@@ -18,6 +18,7 @@ test_that("subject variable is specified", {
 		subjectVar = "SUBJID"
 	)
 	
+	# plots are sorted based on factor levels:
 	expect_named(plots, levels(data$SUBJID))
 			
 })
@@ -39,26 +40,6 @@ test_that("error if subject variable is not present in the data", {
 			
 })
 
-test_that("subject variable order is retained", {
-			
-	data <- data.frame(
-		LBTEST = c("A", "B", "C"),
-		LBDY = c(1, 2, 3),
-		USUBJID = factor(c("1", "2", "1"), levels = c("2", "1"))
-	)
-			
-	expect_silent(
-		plots <- subjectProfileEventPlot(
-			data = data,
-			paramVar = "LBTEST",
-			timeVar = "LBDY"
-		)
-	)
-			
-	expect_named(plots, levels(data$USUBJID))
-		
-})
-
 test_that("parameter variables are correctly displayed for each subject", {
 			
 	data <- data.frame(
@@ -74,7 +55,7 @@ test_that("parameter variables are correctly displayed for each subject", {
 	)
 	
 	# test data is retained
-	for(subjID in names(plots)){
+	for(subjID in unique(data$USUBJID)){
 		
 		# check that the sublist is a list of ggplot object
 		expect_type(plots[[!!subjID]], "list")
@@ -85,7 +66,7 @@ test_that("parameter variables are correctly displayed for each subject", {
 			object = {		
 				
 				gg <- plots[[!!subjID]][[1]]	
-				# extract data behind the text
+				# extract data behind the point
 				isGeomPoint <- sapply(gg$layers, function(l) inherits(l$geom, "GeomPoint"))
 				ggDataPoint <- layer_data(gg, which(isGeomPoint))
 				xCoord <- ggDataPoint[order(ggDataPoint$y), "x"]
