@@ -14,6 +14,9 @@
       - x lab set to time lab by default
     o getPageVar:
       - fix when only one var is specified
+          o subjectProfileEventPlot:
+    o subjectProfileLinePlot:
+      - records sorted based on levels of param name var if factor
 1.4.3
     o change default palette for Windows support: u25C0 -> u25C4, u25B6 -> u25BA, u271A -> +, u2605 (star) -> u2666 (diamond), u25EF -> u25CB
 1.4.2
